@@ -1,5 +1,12 @@
 2017-03-04  Albert Graef  <aggraef@gmail.com>
 
+	* etc/pure-mode.el.in (pure-calculate-indent): Bugfix: --if was
+	mistaken as an 'if' in auto-indentation. Also fix up some changed
+	Emacs command names and broken links in the mode description for
+	Emacs 25.1+. In addition, pure-mode is now derived from prog-mode,
+	rather than fundamental-mode, so that the corresponding hooks are
+	run in addition to the pure-mode-hooks.
+
 	* examples/lucid.pure: Add Lucid example.
 
 2017-03-02  Albert Graef  <aggraef@gmail.com>
